- Enabled maven profile for JDK >= 9 that will add a surefire <argLine> with '--add-opens java.base/jdk.internal.loader=ALL-UNNAMED' to ensure module reflection can occur during tests. - Disabled travis openjdk11 and oraclejdk-ea builds - those build environments are not currently stable
Resolves #364